# cookiecutter-python-vscode-github

./: .composition.yaml  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  cookiecutter.yaml  package-composition.yaml  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.dockerfile  devcontainer.json  devcontainer.sh  postCreateCommand.sh
.github/workflows/: makefile.yml  python-publish.yml
cookiecutter/{{cookiecutter.project_slug}}/: Makefile
cookiecutter/{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
cookiecutter_python_vscode_github/: __main__.py  cookie-composer.yaml  cookiecutter.json
cookiecutter_python_vscode_github/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Makefile  cookiecutter.yaml  package-composition.yaml  pyproject.toml  requirements-dev.txt
cookiecutter_python_vscode_github/{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.dockerfile  devcontainer.json  devcontainer.sh
cookiecutter_python_vscode_github/{{cookiecutter.project_slug}}/.github/workflows/: makefile.yml  python-publish.yml
cookiecutter_python_vscode_github/{{cookiecutter.project_slug}}/make/: venv.sh
cookiecutter_standalone_pypackage/: __main__.py  cookiecutter.json
cookiecutter_standalone_pypackage/{{cookiecutter.project_slug}}/: Makefile  pyproject.toml
cookiecutter_standalone_pypackage/{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json  devcontainer.sh
cookiecutter_standalone_pypackage/{{cookiecutter.project_slug}}/.github/workflows/: python-publish.yml
cookiecutter_standalone_pypackage/{{cookiecutter.project_slug}}/make/: venv-init.sh  venv.sh
cookiecutter_standalone_pypackage/{{cookiecutter.project_slug}}/tests/: conftest.py  test_main.py
cookiecutter_standalone_pypackage/{{cookiecutter.project_slug}}/tests/data/: capgain.ini
cookiecutter_standalone_pypackage/{{cookiecutter.project_slug}}/tests/source/: test_file.py
cookiecutter_standalone_pypackage/{{cookiecutter.project_slug}}/tests/step/: test_base.py  test_report.py
cookiecutter_standalone_pypackage/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py
make/: venv.sh
tests/: test_main.py
{{cookiecutter.project_slug}}/: package-composition.yaml
