[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter-python-vscode-github"
authors = [
    {name = "Dinaldo Pessoa", email = "dinaldoap@gmail.com"},
]
description = "Cookiecutter for a standalone Python package, which requires only a local machine to build and upload it to PyPI."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cookiecutter", "standalone", "pypackage"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cookiecutter",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/dinaldoap/cookiecutter-python-vscode-github"

[project.scripts]
cookiecutter-python-vscode-github = "cookiecutter_python_vscode_github.__main__:main"

[tool.setuptools.packages.find]
include = ["cookiecutter_python_vscode_github*"]

[tool.setuptools_scm]
write_to = "cookiecutter_python_vscode_github/version.py"
version_scheme = "post-release"