[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug_hyphen}}"
authors = [
    {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"},
]
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.8"
keywords = {{cookiecutter.project_keywords}}
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
dependencies = [
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug_hyphen}}"

[project.scripts]
{{cookiecutter.project_slug_hyphen}} = "{{cookiecutter.project_slug}}.__main__:main"

[tool.setuptools.packages.find]
include = ["{{cookiecutter.project_slug}}*"]

[tool.setuptools_scm]
write_to = "{{cookiecutter.project_slug}}/version.py"
version_scheme = "post-release"