[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "capgain"
authors = [
    {name = "Dinaldo Pessoa", email = "dinaldoap@gmail.com"},
]
description = "Calculator of capital gain and accumulated wealth for brazilian investors."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["capital", "gain", "taxes"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    "lxml",
    "typer",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/dinaldoap/capgain"

[project.scripts]
capgain = "capgain.__main__:main"

[tool.setuptools.packages.find]
include = ["capgain*"]

[tool.setuptools_scm]
write_to = "capgain/version.py"
version_scheme = "post-release"